--- a/main.css
+++ b/main.css
@@ -97,3 +97,17 @@ body {
 .done {
     background-color:rgba(193, 220, 230, 0.2)
 }
+.footer {
+    position: absolute;
+    bottom: 0;
+    width: 100%;
+    display: flex;
+    height: 40px;
+    background-color: rgba(156, 156, 156, 0.493);
+}
+.footer {
+    color: var(--text-color);
+    font-size: 1.4rem;
+    justify-content: center;
+    align-items: center;
+}
